--- a/css/settings.css
+++ b/css/settings.css
@@ -26,7 +26,7 @@
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 2rem;
-    box-shadow: 5px 5px #038ecf;
+    box-shadow: 5px 5px #ffce55;
     border: 2px solid black;
     border-radius: 10%; /* Could be more or less, depending on screen size */
   }
@@ -36,6 +36,7 @@
     font-family: "bangers";
     margin-bottom: 10px;
     margin-left: 5px;
+    text-shadow: 3px 3px #ffce55;
   }
 
   .modal-content ol {
@@ -164,7 +165,7 @@
       background-color: #fefefe;
       margin: 15% auto; /* 15% from the top and centered */
       padding: 2rem;
-      box-shadow: 5px 5px #038ecf;
+      box-shadow: 5px 5px #ffce55;
       border: 2px solid black;
       border-radius: 10%; /* Could be more or less, depending on screen size */
     }
@@ -257,7 +258,39 @@
       font-weight: 500;
       letter-spacing: 1px;
       height: 2rem;
+      transition: all 0.3s ease;
+      position: relative;
+      display: inline-block;
+      outline: none;
+      border-radius: 5px;
+      z-index: 0;
+      background: #fff;
+      overflow: hidden;
+      border: 2px solid black;
+      color: black;
+    }
+
+    form button:hover {
+      color: #fff;
+      border: #ffce55
     }
   
 
+  }
+    form button:hover:after {
+      width: 100%;
+    
+   }
+  
+    form button:after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    transition: all 0.3s ease;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    background: #ffce55;
+   ;
   }
