--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ Original by @beyondSimple | Comic style panes | https://codepen.io/beyondSimple/
 .comic .double .comic-pane .text::before,
 .comic .triple.double .comic-pane .text::before {
   content: "";
-  dislay: block;
+  display: block;
   position: absolute;
   height: 100%;
   width: 4em;
