--- a/css/footer.css
+++ b/css/footer.css
@@ -7,6 +7,7 @@
         box-sizing: border-box;
     }
 
+
     footer {
         position: fixed;
         bottom: 0;
@@ -36,5 +37,11 @@
     .fab {
     color: #FFFFFF;
     }
+
+    .foot-container p {
+        color: white;
+    }
+
+
 }
 
