--- a/css/footer.css
+++ b/css/footer.css
@@ -42,6 +42,13 @@
         color: white;
     }
 
+    .copyright {
+        background-color:#0000;
+        padding: 2rem;
+        width: 100%;
+        height: 3rem;
+    }
+
 
 }
 
