--- a/css/header.css
+++ b/css/header.css
@@ -1,46 +1,122 @@
-
 /* MEDIA QUERIES */
-@media only screen and (max-width: 450px) {
-    /*----------- Reset------------- */
-    *{
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
-    }
-    .header-container {
-        min-width: 320px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1.5rem 1rem .5rem;
-        background-color: #ffce55;
-        position: relative;
-    }
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    list-style: none;
+}
+@media (min-width: 501px) {
+  .nav-mobile {
+    display: none;
+  }
+  nav {
+    display: flex;
+    background-color: #ffce55;
+    height: 40px;
+    padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: space-between;
+  }
+  a {
+    text-decoration: none;
+  }
+  #inicio {
+    display: flex;
+    align-items: center;
+  }
 
-    .header-container li {
-        display: flex;
-        list-style: none;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-    }
+  nav img {
+    width: 130px;
+    margin: 5px 0;
+  }
 
+  nav a {
+    font-size: 14px;
+    color: #ffffff;
+    margin: 10px;
+  }
 
+  nav button {
+    color: #ffce55;
+    background-color: #ffffff;
+    border-radius: 24px;
+    border: 1px solid #ffce55;
+    font-size: 14px;
+    padding: 0 5px;
+    margin: 10px 5px;
+    cursor: pointer;
+  }
 
-    #logo-comimic {
-        width: 8rem;
-        height: auto;
-        padding-left: 1rem;
-    }
+  nav button:hover {
+    background-color: #ffce55;
+    color: #ffffff;
+    border: 1px solid;
+  }
+}
 
-    #btn-settings {
-        width: 6rem;
-        height: auto;
-        padding-right: 1rem;
-    }
+@media (max-width: 430px) {
+  .nav-desktop {
+    display: none;
+  }
 
-    .settings-btn button {
-        border:none;
-        background-color: transparent;
-    }
+  .main-header {
+    background: #ffce55;
+    width: 100%;
+    display: flex;
+  }
+  nav {
+    position: absolute;
+    left: 50%;
+    width: 300px;
+    top: 77px;
+    background: #ffce55;
+    transform: translateX(100%);
+    transition: 0.4s ease;
+    z-index: 100;
+    border: 1px solid black;
+  }
+
+  .btn-nav:hover {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  .navigation li {
+    list-style: none;
+    width: 100%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  }
+
+  .navigation a {
+    display: block;
+    line-height: 3.5;
+    padding: 0 10px;
+    text-decoration: none;
+    transition: 0.4s ease;
+  }
+
+  #btn-nav {
+    display: none;
+  }
+
+  #btn-nav:checked ~ nav {
+    transform: translateX(0);
+  }
+
+  .btn-nav {
+    transition: 0.2s ease;
+    display: flex;
+  }
+
+  .btn-nav:hover {
+    background: #ad882bd7;
+  }
+  .nav-mobile {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    width: 100%;
+    align-content: center;
+    padding: 1%;
+    margin: 2%;
+    height: 60px;
+  }
 }
