--- a/css/header.css
+++ b/css/header.css
@@ -5,28 +5,36 @@
     box-sizing: border-box;
     list-style: none;
 }
-@media (min-width: 501px) {
+@media (min-width: 469px) {
+
   .nav-mobile {
     display: none;
+  }
+  .navigation-desk{
+
+    display: flex;
+    align-items: center;
+    color: black;
+  }
+  .navigation-desk a{
+    font-family: "Bangers", sans-serif;
+    color: #222;
   }
   nav {
     display: flex;
     background-color: #ffce55;
     height: 40px;
-    padding: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+
     justify-content: space-between;
+
   }
   a {
     text-decoration: none;
   }
-  #inicio {
-    display: flex;
-    align-items: center;
-  }
+
 
   nav img {
-    width: 130px;
+    
     margin: 5px 0;
   }
 
@@ -35,29 +43,17 @@
     color: #ffffff;
     margin: 10px;
   }
-
-  nav button {
-    color: #ffce55;
-    background-color: #ffffff;
-    border-radius: 24px;
-    border: 1px solid #ffce55;
-    font-size: 14px;
-    padding: 0 5px;
-    margin: 10px 5px;
-    cursor: pointer;
-  }
-
-  nav button:hover {
-    background-color: #ffce55;
-    color: #ffffff;
-    border: 1px solid;
-  }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 468px) {
   .nav-desktop {
     display: none;
   }
+  header{
+    position: fixed;
+    top: 0;
+    z-index: 999;
+}
 
   .main-header {
     background: #ffce55;
@@ -74,6 +70,7 @@
     transition: 0.4s ease;
     z-index: 100;
     border: 1px solid black;
+    overflow: hidden;
   }
 
   .btn-nav:hover {
