--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -59,7 +59,7 @@
 
 
     /* CHALLENGE DISPLAY */
-    .challengeDisplay{
+     .challengeDisplay{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -76,6 +76,21 @@
         border-radius: 20px;
     }
 
+    .cloudResult{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    .cloudResult p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.1rem;
+        text-align: center;
+    }
+
     .game-btn{
         display: flex;
         justify-content: center;
@@ -90,7 +105,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        position: absolute;
         top: 4rem;
         gap: 1rem;
     }
@@ -117,7 +131,7 @@
         font-size:35px;
         border-radius: 10px;
         margin-top: 2rem;
-    }
+    } 
 
 
 
@@ -129,8 +143,6 @@
     100% { transform: rotate(0deg); }
     }
 }
-
-
 
 
 
