--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -7,6 +7,9 @@
 
 @media only screen and (max-width: 500px) {
 
+    body{
+        background-color: #000;
+    }
     .boardGame {
         background-color: #000;
     }
@@ -17,7 +20,7 @@
         justify-content:space-between;
         align-items: center;
         flex-direction: column;
-        margin: 2rem;
+        margin: 5rem 2rem 2rem 2rem;
         height: 100vh;
         padding: 3rem;
         background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684268314/random/bk-blue-mobil_if9clv.svg');
@@ -65,7 +68,7 @@
         align-items: center;
         flex-direction: column;
         position: relative;
-        margin: 2rem;
+        margin: 2rem ;
         max-width: 1440px;
         height: 100vh;
         padding: 3rem;
