--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 /* MEDIA QUERIES */
-@media only screen and (max-width: 450px) {
+
     /*----------- Reset------------- */
     *{
         margin: 0px;
@@ -11,6 +11,7 @@
     footer {
         width: 100%;
         font-family: 'Happy monkey', sans-serif;
+        text-align: center;
     }
 
     .social-media {
@@ -47,6 +48,4 @@
         height: 3rem;
     }
 
-
-}
 
