--- a/css/header.css
+++ b/css/header.css
@@ -1,130 +1,191 @@
 /* MEDIA QUERIES */
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    list-style: none;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  list-style: none;
 }
 @media (min-width: 469px) {
-
   .nav-mobile {
     display: none;
   }
-  .navigation-desk{
-
+  .navigation-desk {
     display: flex;
     align-items: center;
     color: black;
   }
-  .navigation-desk a{
+  .navigation-desk a {
     font-family: "Bangers", sans-serif;
     color: #222;
   }
   nav {
     display: flex;
     background-color: #ffce55;
-    height: 40px;
-
+    height: 70px;
     justify-content: space-between;
-
   }
-  a {
-    text-decoration: none;
-  }
-
-
-  nav img {
-    
-    margin: 5px 0;
+  .header-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 30%;
   }
 
-  nav a {
-    font-size: 14px;
-    color: #ffffff;
-    margin: 10px;
+   /*        LOGO BUTTON    */
+   nav ul{
+    display: flex;
+    width: 15%;
+    justify-content: space-around;
+   }
+   #btn-logo {
+    display: flex;
+    width: 7%;
+  }
+  #btn-logo:hover {
+    background: #ad882bd7;
+  }
+
+  /*         SETTINGS BUTTON     */
+  #btn-settings {
+    border: none;
+    background: #ffce55;
+    width: 110%;
+    text-align: left;
+    padding: 2%;
+    font-family: "Bangers", sans-serif;
+    color: #222;
+    font-size: 34px;
+  }
+  #btn-settings:hover {
+    background: #ad882bd7;
+  }
+
+  /*         RULESET BUTTON      */
+  #btn-ruleset {
+    border: none;
+    background: #ffce55;
+    width: 110%;
+    text-align: left;
+    padding: 2%;
+    font-family: "Bangers", sans-serif;
+    color: #222;
+    font-size: 34px;
+  }
+
+  #btn-ruleset:hover {
+    background: #ad882bd7;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 468px) {
   .nav-desktop {
     display: none;
   }
-  header{
+  /*            HEADER             */
+  header {
     position: fixed;
     top: 0;
     z-index: 999;
     width: 100%;
     background: #ffce55;
-}
-
-
-/* nav {
-    position: absolute;
-    left: 50%;
-    width: 300px;
-    top: 65px;
-    background: #ffce55;
-    transform: translateX(100%);
-    transition: 0.4s ease;
-    z-index: 100;
-    border: 1px solid black;
-    overflow: hidden;
-    border-radius: 2px;
-  } */
-
-
-/*   .navigation li {
-    list-style: none;
-    width: 100%;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  } */
-
-   /*  .btn-nav:hover {
-    background: rgba(0, 0, 0, 0.3);
-  }
-
-  #btn-nav {
-    display: none;
-  }
-  #btn-nav:checked ~ nav {
-    transform: translateX(0);
-  }
-
-  .btn-nav {
-    transition: 0.2s ease;
     display: flex;
   }
-
-  .btn-nav:hover {
-    background: #ad882bd7;
+  /*             NAVEGATION       */
+  .nav-mobile nav {
+    position: absolute;
+    width: 20%;
+    top: 65px;
+    right: 20%;
+    background: #ffce55;
+    transform: translateX(100%);
+    overflow: hidden;
+    border-radius: 2px;
   }
+
+  .navigation li {
+    list-style: none;
+    width: 100%;
+    border-bottom: 1px solid rgba(87, 69, 69, 0.882);
+  }
+
   .nav-mobile {
     display: flex;
     width: 100%;
     justify-content: space-between;
     height: 65px;
-} */
-/* #btn-logo{
-    display: flex;
-}
-#btn-settings{
-    border: solid #b88504 1px;
-    background: #ffce55;
-    width: 100%;
-    text-align: left;
-    padding: 2%;
-    font-family: "Happy Monkey", cursive;
-    color: #222;
-}
-#btn-ruleset{
-    border: solid #b88504 1px;
-    background: #ffce55;
-    width: 100%;
-    text-align: left;
-    padding: 2%;
+  }
 
+  /*        LOGO BUTTON    */
+  #btn-logo {
+    display: flex;
+    width: 25%;
+  }
+  #btn-logo:hover {
+    background: #ad882bd7;
+  }
+
+  /*         SETTINGS BUTTON     */
+  #btn-settings {
+    border: solid #b88504 1px;
+    background: #ffce55;
+    width: 100%;
+    text-align: left;
+    padding: 2%;
     font-family: "Happy Monkey", cursive;
     color: #222;
-} */
-  
+    line-height: 2;
+  }
+  #btn-settings:hover {
+    background: #ad882bd7;
+  }
+
+  /*         RULESET BUTTON      */
+  #btn-ruleset {
+    border: solid #b88504 1px;
+    background: #ffce55;
+    width: 100%;
+    text-align: left;
+    padding: 2%;
+    font-family: "Happy Monkey", cursive;
+    color: #222;
+    line-height: 2;
+  }
+
+  #btn-ruleset:hover {
+    background: #ad882bd7;
+  }
+  /*         HAMBURGUER BUTTON */
+  .hamb-btn {
+    display: flex;
+    background-color: #ffce55;
+    border-style: none;
+  }
+  .hamb-btn img {
+    height: 60px;
+  }
+
+  .hamb-btn:hover {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  .hamb-btn:hover {
+    background: #ad882bd7;
+  }
 }
