--- a/css/header.css
+++ b/css/header.css
@@ -46,7 +46,7 @@
   }
 
   /*         SETTINGS BUTTON     */
-  #btn-settings {
+  #btn-settings, #btn-settings-2 {
     border: none;
     background: #ffce55;
     width: 110%;
@@ -56,12 +56,12 @@
     color: #222;
     font-size: 34px;
   }
-  #btn-settings:hover {
+  #btn-settings:hover, #btn-settings-2:hover {
     background: #ad882bd7;
   }
 
   /*         RULESET BUTTON      */
-  #btn-ruleset {
+  #btn-ruleset, #btn-ruleset-2  {
     border: none;
     background: #ffce55;
     width: 110%;
@@ -72,7 +72,7 @@
     font-size: 34px;
   }
 
-  #btn-ruleset:hover {
+  #btn-ruleset:hover, #btn-ruleset-2:hover  {
     background: #ad882bd7;
   }
 }
