--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -155,5 +155,46 @@
 }
 
 
+/* Gameplay buttons styling - Mobile*/
 
+.timerGame button, .game-btn button, #startTimer {
+    width: 35%;
+    font-family: "happy monkey";
+    font-weight: 500;
+    letter-spacing: 1px;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    border-radius: 3px;
+    z-index: 0;
+    background: #fff;
+    overflow: hidden;
+    border: 1px solid black;
+    color: black;
+    margin-left: -7px;
+}
 
+/* Gameplay buttons - Desktop Styling */
+
+@media only screen and (min-width: 431px) {
+
+.timerGame button, .game-btn button, #startTimer {
+    width: 30%;
+    font-family: "happy monkey";
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    height: 2rem;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    z-index: 0;
+    background: #fff;
+    overflow: hidden;
+    border: 2px solid black;
+    color: black;
+  }
+}
