--- a/css/settings.css
+++ b/css/settings.css
@@ -49,6 +49,7 @@
     font-size: 0.9rem;
     text-align: justify;
     font-family: "happy monkey";
+    list-style-type: decimal;
   }
   
   .modal-content li {
@@ -223,6 +224,7 @@
       font-size: 1.1rem;
       text-align: justify;
       font-family: "happy monkey";
+      list-style-type: decimal;
     }
     
     .modal-content li {
