--- a/css/slider.css
+++ b/css/slider.css
@@ -2,26 +2,30 @@
 
 
 .slider{
-	background-image: url(https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/bk_GREEN_gwmz9w.svg);
-	background-size: 400px;
-	height: 300px;
+	background-image: url(https://res.cloudinary.com/dcwt8jbja/image/upload/v1684418413/bk-green-horizontal_jeu91x.svg);
+	background-size: 100%;
+	height: 200px;
 	margin: 6rem 2rem 2rem 2rem;
-	background-repeat: no-repeat;
+	background-repeat:no-repeat;
 	padding-bottom: 500px;
-	padding-top: 100px;
-	border-radius: 20px;
+	padding-top: 25px;
+	border-radius: 100px;
+	box-shadow:10px,10px,10px,10px,#333;
+	background-position:center ;
 }
 
 
+
 .slideshow {
-	width: 40%;
-    height: 300px;
+	width: 50% ;
+    height: 20px;
 	position:relative;
 	text-align: center;
 	line-height: 600px;
 	padding-bottom: 30px;
 	margin: 0 auto;
-	transition: all 0.5s ease;
+	transition: all 0.5s e;
+
     }
 /* slideshow item */
 .slideshow--item {
