--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -28,6 +28,8 @@
         display: flex;
         cursor: pointer;
         text-decoration: none;
+        width: 10%;
+
       }
 
       .ready-btn::after {
@@ -85,7 +87,7 @@
         transform: translate(-50%, -50%);
         font-size: 1rem;
         text-align: center;
-        width: 80%;
+        width: 63%;
     }
 
 
@@ -133,10 +135,10 @@
 
     .game-btn{
         display: flex;
-        justify-content: center;
+
         align-items: center;
         flex-direction: row;
-        gap:3rem;
+        gap:4rem;
     }
 
     /* TIMER */
@@ -145,8 +147,8 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        top: 4rem;
-        gap: 1rem;
+        gap: 3rem;
+
     }
 
     .timer{
@@ -202,8 +204,11 @@
     overflow: hidden;
     border: 1px solid black;
     color: black;
-    margin-left: -7px;
+
     padding: .3rem 0;
+}
+.game-btn{
+    width: 100%;
 }
 
 #startTimer {
@@ -272,11 +277,11 @@ height: 32em;
 
 /* buton ready*/
 .ready-btn {
-    animation: playShadow 1.6s ease-out infinite;
+    animation: playShadow 1.6s ease infinite;
     display: flex;
     cursor: pointer;
     text-decoration: none;
-    align-self: flex-end;
+
   }
 
   .ready-btn::after {
@@ -299,7 +304,6 @@ height: 32em;
     flex-direction: column;
     flex-wrap: wrap;
     margin: 2rem;
-    height: 80vh;
     padding: 3rem;
     background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg');
     background-position: center;
@@ -337,7 +341,7 @@ height: 32em;
     transform: translate(-50%, -50%);
     font-size: 15rem;
     text-align: justify;
-    width: 35%;
+    width: 30%;
     z-index: 5;
     letter-spacing: 0.141em;
 
@@ -348,24 +352,25 @@ height: 32em;
 
 
 .ready-btn {
+    display: flex;
     background: none;
     border: none;
     cursor: pointer;
-    margin-bottom: 3rem;
-    position: relative;
+    width: 20%;
+    display: inline;
+    align-self: last baseline;
 }
 
 
 /* CHALLENGE DISPLAY */
  .challengeDisplay{
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+
     position: relative;
     margin: 2rem ;
-    max-width: 1440px;
-    height: 80vh;
+
+
     padding: 3rem;
     position: relative;
     background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg');
@@ -454,6 +459,8 @@ padding: 0;
 margin: 0 0.4em;
 }
 #startTimer{
-    width: 21%;
+    width: 20%;
+    font-size: 1.3;
+
 }
 }
