--- a/css/slider.css
+++ b/css/slider.css
@@ -153,8 +153,13 @@
 		margin-top: 80px;
 	}
 } */
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 431px) {
+	.slider{
+		background-image:url(https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/bk_GREEN_gwmz9w.svg) ;
+	}
+	
 	.slideshow {
+
 		width: 100%;
   	height: 150px;
 }
