--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -125,7 +125,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    gap: 4rem;
+    justify-content: space-between;
     margin: 0 0 3rem 0;
   }
 
