--- a/css/ruleset.css
+++ b/css/ruleset.css
@@ -59,11 +59,11 @@
     font-size: 0.9rem;
     text-align: justify;
     font-family: "happy monkey";
-    list-style-type: decimal;
   }
   
   .modal-content-ruleset li {
     margin-bottom: 5px;
+    list-style-type: decimal;
     
 
   }
@@ -79,19 +79,19 @@
 
   @media only screen and (min-width: 431px) {
     .modal-content-ruleset {
-      max-width: 500px;
-      height: 700px;
+      max-width: 600px;
+      height: 650px;
       background-color: #fefefe;
-      margin: 15% auto; /* 15% from the top and centered */
+      margin: 7% auto; 
       padding: 2rem;
       border: 2px solid black;
     }
   
     .modal-content-ruleset h1 {
-        margin-top: 50px;
+      margin-top: 30px;
       font-size: 3.7rem;
       font-family: "bangers";
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       margin-left: 5px;
     }
 
@@ -99,7 +99,7 @@
         text-align: justify;
         margin-top: 20px;
         margin-bottom: 30px;
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         padding: 5px;
       }
   
@@ -109,10 +109,9 @@
       padding: 5px;
       margin-bottom: 10px;
       line-height: 1.2;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       text-align: justify;
       font-family: "happy monkey";
-      list-style-type: decimal;
     }
     
     .modal-content-ruleset li {
