--- a/css/settings.css
+++ b/css/settings.css
@@ -49,11 +49,12 @@
     font-size: 0.9rem;
     text-align: justify;
     font-family: "happy monkey";
-    list-style-type: decimal;
+   
   }
   
   .modal-content li {
     margin-bottom: 5px;
+    list-style-type: decimal;
 
   }
   /* The Close Button */
@@ -126,6 +127,7 @@
     display: none;
     padding: 6px 12px;
     width: 100%;
+    height: 240px;
     border-top: 1px solid;
   }
 
@@ -200,9 +202,9 @@
 
   @media only screen and (min-width: 431px) {
     .modal-content {
-      max-width: 500px;
+      max-width: 600px;
       background-color: #fefefe;
-      margin: 15% auto; /* 15% from the top and centered */
+      margin: 7% auto; 
       padding: 2rem;
       border: 2px solid black;
         }
@@ -221,10 +223,9 @@
       padding: 5px;
       margin-bottom: 10px;
       line-height: 1.2;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       text-align: justify;
       font-family: "happy monkey";
-      list-style-type: decimal;
     }
     
     .modal-content li {
@@ -243,6 +244,9 @@
     font-size: 2rem;
   }
 
+  .tab-content {
+  height: 310px;
+  }
     /* Style the tab */
   .setting-tabs {
       display: flex;
