--- a/css/slider.css
+++ b/css/slider.css
@@ -10,7 +10,6 @@
 	padding-bottom: 500px;
 	padding-top: 25px;
 	border-radius: 50px;
-	box-shadow:10px,10px,10px,10px,#333;
 	background-position:center ;
 }
 
@@ -24,13 +23,13 @@
 	line-height: 600px;
 	padding-bottom: 30px;
 	margin: 0 auto;
-	transition: all 0.5s e;
+	transition: all 0.5s ease;
 
     }
 /* slideshow item */
 .slideshow--item {
 	width: 100%;
-  	height: 400px;
+  	height: 450px;
 	line-height: 1.5;
 	position: absolute;
 	top: 0;
@@ -141,18 +140,7 @@
 .folio-button:hover {
 	background-color: #B0D6C9;
 }
-/* @media only screen and (max-width: 980px) {
-	.slideshow {
-		width: 100%;
-  	height: 200px;
-}
-	.slideshow--bullet {
-		margin: 8px 8px -110px;
-}
-	.button-container {
-		margin-top: 80px;
-	}
-} */
+
 @media only screen and (max-width: 431px) {
 	.slider{
 		background-image:url(https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/bk_GREEN_gwmz9w.svg) ;
@@ -216,7 +204,7 @@
 		padding-left: 200px;
 		padding-right: 100px;
 		width: auto;
-		height: 100
+		height: 100%;
 	}
 	.img6{
 		padding-left:50px;
