--- a/css/header.css
+++ b/css/header.css
@@ -56,12 +56,15 @@ margin: 0 2em;
     width: 15%;
     justify-content: space-around;
    }
-   .btn-logo {
+   #btn-logo {
     display: flex;
     width: 10%;
+  
   }
-  .btn-logo:hover {
+
+  #btn-logo:hover {
     background: #ad882bd7;
+    width: 7%;
   }
 
   /*         SETTINGS BUTTON     */
